--- a/socket/package.json
+++ b/socket/package.json
@@ -1,21 +1,19 @@
 {
-  "name": "test",
+  "name": "socket",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "@hapi/joi": "^15.0.3",
-    "axios": "^0.19.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "event": "^1.0.0",
+    "events": "^3.0.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "mongoclient": "^1.0.3",
-    "mongodb": "^2.2.36",
-    "monk": "^7.0.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "nodejs-websocket": "^1.7.2"
   }
 }
